--- a/Js Projects/Number Guessing Game(not finish)/index.html
+++ b/Js Projects/Number Guessing Game(not finish)/index.html
@@ -21,8 +21,8 @@
                 </section>
                 <section class="right">
                  <p class="message">Estimated...</p>
-                 <p class="label-score">Score : 20</p>
-                 <p class="label-highscore">Highest Score</p>
+                 <p class="score">Score : 0</p>
+                 <p class="highscore">Highest Score : 0</p>
                 </section>
         </main>
         <script src = "script.js"></script>
